--- a/package.json
+++ b/package.json
@@ -15,5 +15,21 @@
   "bugs": {
     "url": "https://github.com/pengcheng95/soloWeek/issues"
   },
-  "homepage": "https://github.com/pengcheng95/soloWeek#readme"
+  "homepage": "https://github.com/pengcheng95/soloWeek#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.15.5",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "webpack": "^3.6.0"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.0"
+  }
 }
