completed database for poems and discover and profile

--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
+    "express-session": "^1.15.6",
     "mongoose": "^4.11.13",
     "mongoose-auto-increment": "^5.0.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "webpack": "^3.6.0"
   },
