--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "passport-facebook": "^2.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
+    "react-css-modules": "^4.7.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -38,6 +40,10 @@
     "webpack": "^3.6.0"
   },
   "devDependencies": {
-    "redux-devtools": "^3.4.0"
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "redux-devtools": "^3.4.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9"
   }
 }
