--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.7",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
     "mongoose": "^4.11.13",
@@ -40,6 +41,7 @@
     "react-router-dom": "^4.2.2",
     "react-toggle-display": "^2.2.0",
     "redux": "^3.7.2",
+    "style-loader": "^0.18.2",
     "webpack": "^3.6.0"
   },
   "devDependencies": {
